# ublarcvapp

./: .gitignore  CMakeLists.txt  README.md  configure.sh
ublarcvapp/: CMakeLists.txt
ublarcvapp/ContourTools/: CMakeLists.txt  ContourAStarClusterAlgo.cxx  ContourAStarClusterAlgo.h  ContourCluster.cxx  ContourCluster.h  ContourClusterAlgo.cxx  ContourClusterAlgo.h  ContourShapeMeta.cxx  ContourShapeMeta.h  LinkDef.h
ublarcvapp/DLTagger/: CMakeLists.txt  DLCheaterTagger.cxx  DLCheaterTagger.h  DLSSNetOverlayCheater.cxx  DLSSNetOverlayCheater.h  DLTagger.cxx  DLTagger.h  DLTaggerProcess.cxx  DLTaggerProcess.h  LinkDef.h  README.md
ublarcvapp/DLTagger/mrcnnmatch/: AStarMaskCombo.cxx  AStarMaskCombo.h  CMakeLists.txt  CropMaskCombo.cxx  CropMaskCombo.h  FeaturesMaskCombo.cxx  FeaturesMaskCombo.h  Gen3DEndpoints.cxx  Gen3DEndpoints.h  GenGraphPoints.cxx  GenGraphPoints.h  MRCNNMatch.cxx  MRCNNMatch.h  MRCNNMatchConfig.cxx  MRCNNMatchConfig.h  MRCNNMatchTypes.cxx  MRCNNMatchTypes.h
ublarcvapp/DLTagger/test/: .gitignore  README.md  test_dltagger.py  test_mrcnnmatch.py
ublarcvapp/Filter/: CCIncFilter.cxx  CCIncFilter.h  CCQETruthFilter.cxx  CCQETruthFilter.h  CMakeLists.txt  CosmicFilter.cxx  CosmicFilter.h  EmptyImageFilter.cxx  MCFilter.cxx  MCFilter.h  MCSingleParticleFilter.cxx  MCSingleParticleFilter.h  NuFilter.cxx  NuFilter.h  QSumFilter.cxx  ROICountFilter.cxx  ROICountFilter.h  ROISizeFilter.cxx  ROISizeFilter.h  RSEFilter.cxx  RSEFilter.h  VtxInRegion.cxx  VtxInRegion.h
ublarcvapp/LArOpenCVHandle/: BadRegionAna.cxx  BadRegionAna.h  BlankImage.cxx  BlankImage.h  CMakeLists.txt  CosmicPixelAna.cxx  CosmicPixelAna.h  CosmicTrackAna.cxx  CosmicTrackAna.h  CosmicVertexAna.cxx  CosmicVertexAna.h  DeadWireAna.cxx  DeadWireAna.h  GenDeadChannelMap.h  GoodcROIFilter.cxx  GoodcROIFilter.h  ImageROICheckMC.cxx  ImageROICheckMC.h  InterWriteOutLC.cxx  InterWriteOutLC.h  LArbysImage.cxx  LArbysImage.h  LArbysImageExtract.h  LArbysImageMC.cxx  LArbysImageMC.h  LArbysImageMaker.cxx  LArbysImageMaker.h  LArbysUtils.cxx  LArbysUtils.h  OperateImage.cxx  OperateImage.h  PGraphTruthMatch.cxx  PGraphTruthMatch.h  PIDImageMaker.h  PostTagger.h  PreProcessor.cxx  PreProcessor.h  ROIAna.cxx  ROIAna.h  SSNetEventAna.cxx  (+13 more)
ublarcvapp/LArOpenCVHandle/cfg/: for_pressnet.cfg  prod_fullchain_ssnet_combined_newtag_base_c10_union_server.cfg  prod_fullchain_ssnet_combined_newtag_base_c10_union_server_track_only.cfg
ublarcvapp/LArOpenCVHandle/mac/: run_reco_pressnet.py
ublarcvapp/LArliteHandler/: CMakeLists.txt  LArliteManager.cxx  LArliteManager.h  LinkDef.h
ublarcvapp/LLCVProcessor/: CMakeLists.txt  LArCVProcessTest.cxx  LArCVProcessTest.h  LLCVProcessBase.cxx  LLCVProcessBase.h  LLCVProcessDriver.cxx  LLCVProcessDriver.h  LLCVProcessTest.cxx  LLCVProcessTest.h  LinkDef.h
ublarcvapp/MCTools/: CMakeLists.txt  ConvertMCInfoForLArCV2.cxx  ConvertMCInfoForLArCV2.h  FlashMatcher.cxx  FlashMatcher.h  FlashMatcherV2.cxx  FlashMatcherV2.h  LArbysMC.cxx  LArbysMC.h  LinkDef.h  MCPixelPGraph.cxx  MCPixelPGraph.h  MCPixelPMap.cxx  MCPixelPMap.h  MCPos2ImageUtils.cxx  MCPos2ImageUtils.h  NeutrinoPixelFilter.cxx  NeutrinoPixelFilter.h  NeutrinoVertex.cxx  NeutrinoVertex.h  README.md  SimChannelVoxelizer.cxx  SimChannelVoxelizer.h  Timing.md  TruthShowerTrunkSCE.cxx  TruthShowerTrunkSCE.h  TruthTrackSCE.cxx  TruthTrackSCE.h  crossingPointsAnaMethods.cxx  crossingPointsAnaMethods.h
ublarcvapp/NCPi0/: LinkDef.h  SaveCutVariables.cxx  SaveCutVariables.h  SaveProbabilities.cxx  SaveProbabilities.h  Utils.cxx  Utils.h
ublarcvapp/Reco3D/: AStar3DAlgo.cxx  AStar3DAlgo.h  AStar3DAlgoConfig.cxx  AStar3DAlgoConfig.h  AStar3DAlgoProton.cxx  AStar3DAlgoProton.h  AStar3DTypes.h  AStarTracker.cxx  AStarTracker.h  AStarUtils.cxx  AStarUtils.h  CMakeLists.txt  Lattice.cxx  Lattice.h  LinkDef.h  Run3DTracker.cxx  Run3DTracker.h  TrackReverser.cxx  TrackReverser.h  TrackerEventDisplay.cxx  TrackerEventDisplay.h
ublarcvapp/RecoTools/: CMakeLists.txt  DetUtils.cxx  DetUtils.h  LinkDef.h  README.md
ublarcvapp/Stitchers/: CMakeLists.txt  LinkDef.h  UBSparseFlowStitcher.cxx  UBSparseFlowStitcher.h
ublarcvapp/Tagger/: AStarNodes2BMTrackCluster3D.cxx  AStarNodes2BMTrackCluster3D.h  BMTCV.cxx  BMTCV.h  BMTrackCluster3D.cxx  BMTrackCluster3D.h  BoundaryEndPt.h  BoundaryFlashIndex.cxx  BoundaryFlashIndex.h  BoundaryMatchAlgo.cxx  BoundaryMatchAlgo.h  BoundaryMatchArrays.cxx  BoundaryMatchArrays.h  BoundaryMuonTaggerAlgo.cxx  BoundaryMuonTaggerAlgo.h  BoundaryMuonTaggerAlgoConfig.cxx  BoundaryMuonTaggerAlgoConfig.h  BoundaryMuonTaggerTypes.cxx  BoundaryMuonTaggerTypes.h  BoundarySpacePoint.cxx  BoundarySpacePoint.h  CACAEndPtFilter.cxx  CACAEndPtFilter.h  CMakeLists.txt  FlashMuonTaggerAlgo.cxx  FlashMuonTaggerAlgo.h  FlashMuonTaggerAlgoConfig.cxx  FlashMuonTaggerAlgoConfig.h  FoxTrotLead.cxx  FoxTrotLead.h  FoxTrotTrackerAlgo.cxx  FoxTrotTrackerAlgo.h  FoxTrotTrackerAlgoConfig.cxx  FoxTrotTrackerAlgoConfig.h  FoxTrotTrackerAlgoTypes.cxx  FoxTrotTrackerAlgoTypes.h  Linear3DChargeTagger.cxx  Linear3DChargeTagger.h  Linear3DChargeTaggerConfig.cxx  Linear3DChargeTaggerConfig.h  (+36 more)
ublarcvapp/UBImageMod/: CMakeLists.txt  EmptyChannelAlgo.cxx  EmptyChannelAlgo.h  InfillDataCropper.cxx  InfillDataCropper.h  InfillImageStitcher.cxx  InfillImageStitcher.h  InfillSparsifyImage.cxx  InfillSparsifyImage.h  LinkDef.h  TrackImageMask.cxx  TrackImageMask.h  UBCropLArFlow.cxx  UBCropLArFlow.h  UBCropMask.cxx  UBCropMask.h  UBSplitDetector.cxx  UBSplitDetector.h
ublarcvapp/UBWireTool/: CMakeLists.txt  LinkDef.h  UBWireTool.cxx  UBWireTool.h  WireData.cxx  WireData.h
ublarcvapp/dbscan/: CMakeLists.txt  DBScan.cxx  DBScan.h  DBScanTypes.h  LinkDef.h  README.md  kdtree.cxx  kdtree.h  sDBScan.h  test_simple_dbscan.py
ublarcvapp/ubdllee/: CMakeLists.txt  DLInteraction.cxx  DLInteraction.h  DLMerger.cxx  DLMerger.h  FixedCROIFromFlashAlgo.cxx  FixedCROIFromFlashAlgo.h  FixedCROIFromFlashConfig.cxx  FixedCROIFromFlashConfig.h  LinkDef.h  MergeDLInteraction.cxx  MergeDLInteraction.h  NuAnaMC.cxx  NuAnaMC.h  dwall.cxx  dwall.h
(+44 files in other folders)
